--- a/AspMVCECommerce/Views/Shared/_Layout.cshtml
+++ b/AspMVCECommerce/Views/Shared/_Layout.cshtml
@@ -47,9 +47,9 @@
 
 
                 <ul class="header-links pull-left">
-                    <li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-                    <li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-                    <li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+                    <li><a href="#"><i class="fa fa-phone"></i> +639969472918</a></li>
+                    <li><a href="#"><i class="fa fa-envelope-o"></i> zjpiraman2018@gmail.com</a></li>
+                    <li><a href="#"><i class="fa fa-map-marker"></i> Malolos City Bulacan</a></li>
                 </ul>
                 @*<ul class="header-links pull-right">
                         <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
@@ -69,14 +69,14 @@
                     <!-- LOGO -->
                     <div class="col-md-3">
                         <div class="header-logo">
-                            <a href="#" class="logo">
-                                <img src="~/FrontEnd/img/logo.png" alt="">
+                            <a href="~/Home/Index" class="logo">
+                                <img src="~/FrontEnd/img/logo.png" alt="" style="margin-left: -12px; padding-top: 12px;width:320px;">
                             </a>
                         </div>
                     </div>
                     <!-- /LOGO -->
                     <!-- SEARCH BAR -->
-                    <div class="col-md-6">
+                    <div class="col-md-7" style=" padding-left: 40px; padding-right: 40px; ">
                         <div class="header-search">
                             <form action="~/Home/Store" method="get" id="form-search">
                                 <select class="input-select" id="dropdownSelectedCategory" name="dropdownSelectedCategory">
@@ -101,8 +101,8 @@
                     </div>
                     <!-- /SEARCH BAR -->
                     <!-- ACCOUNT -->
-                    <div class="col-md-3 clearfix">
-                        <div class="header-ctn">
+                    <div class="col-md-2 clearfix">
+                        <div class="header-ctn" style="display: inline-flex; padding-top: 20px;">
                             <!-- Wishlist -->
                             <div>
                                 <a href="#">
@@ -253,17 +253,20 @@
             <div class="container">
                 <!-- row -->
                 <div class="row">
+
                     <div class="col-md-3 col-xs-6">
                         <div class="footer">
                             <h3 class="footer-title">About Us</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+                            <p>This is a Electronic Ecommerce store demo created in Asp MVC .NET Framework 4.5 with Entity Framework. The Database use in this project is MSSQL Server 2019 Express </p>
                             <ul class="footer-links">
-                                <li><a href="#"><i class="fa fa-map-marker"></i>1734 Stonecoal Road</a></li>
-                                <li><a href="#"><i class="fa fa-phone"></i>+021-95-51-84</a></li>
-                                <li><a href="#"><i class="fa fa-envelope-o"></i>email@email.com</a></li>
+                                <li><a href="#"><i class="fa fa-map-marker"></i>Malolos City Bulacan</a></li>
+                                <li><a href="#"><i class="fa fa-phone"></i>+639969472918</a></li>
+                                <li><a href="#"><i class="fa fa-envelope-o"></i>zjpiraman2018@gmail.com</a></li>
                             </ul>
                         </div>
                     </div>
+
+
 
                     <div class="col-md-3 col-xs-6">
                         <div class="footer">
@@ -328,7 +331,7 @@
                         <span class="copyright">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | Developed by: <a style="color: #c1c1c1;" href="http://zaldypiraman2015.wixsite.com/porfolio" target="_blank">Zaldy Jeg Piraman</a>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </span>
                     </div>
