--- a/AspMVCECommerce/Views/Shared/_SellerLayout.cshtml
+++ b/AspMVCECommerce/Views/Shared/_SellerLayout.cshtml
@@ -50,15 +50,16 @@
                 </ul>
             </div>
             <div class="container">
+
                 <ul class="header-links pull-left">
-                    <li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-                    <li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
-                    <li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+                    <li><a href="#"><i class="fa fa-phone"></i> +639969472918</a></li>
+                    <li><a href="#"><i class="fa fa-envelope-o"></i> zjpiraman2018@gmail.com</a></li>
+                    <li><a href="#"><i class="fa fa-map-marker"></i> Malolos City Bulacan</a></li>
                 </ul>
                 @*<ul class="header-links pull-right">
-                        <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-                        <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
-                    </ul>*@
+            <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
+            <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+        </ul>*@
 
                 @Html.Partial("_LoginPartial")
             </div>
@@ -70,17 +71,18 @@
             <div class="container">
                 <!-- row -->
                 <div class="row">
+
+
                     <!-- LOGO -->
                     <div class="col-md-3">
                         <div class="header-logo">
-                            <a href="#" class="logo">
-                                <img src="~/FrontEnd/img/logo.png" alt="">
+                            <a href="~/Home/Index" class="logo">
+                                <img src="~/FrontEnd/img/logo.png" alt="" style="margin-left: -12px; padding-top: 12px;width:320px;">
                             </a>
                         </div>
                     </div>
-                    <!-- /LOGO -->
                     <!-- SEARCH BAR -->
-                    <div class="col-md-6">
+                    <div class="col-md-7" style=" padding-left: 40px; padding-right: 40px; ">
                         <div class="header-search">
                             <form action="~/Home/Store" method="get" id="form-search">
                                 <select class="input-select" id="dropdownSelectedCategory" name="dropdownSelectedCategory">
@@ -105,8 +107,8 @@
                     </div>
                     <!-- /SEARCH BAR -->
                     <!-- ACCOUNT -->
-                    <div class="col-md-3 clearfix">
-                        <div class="header-ctn">
+                    <div class="col-md-2 clearfix">
+                        <div class="header-ctn" style="display: inline-flex; padding-top: 20px;">
                             <!-- Wishlist -->
                             <div>
                                 <a href="#">
@@ -170,8 +172,8 @@
                     </div>
                     <!-- /ACCOUNT -->
                 </div>
-                <!-- row -->
-            </div>
+                    <!-- row -->
+                </div>
             <!-- container -->
         </div>
         <!-- /MAIN HEADER -->
