--- a/AspMVCECommerce/Views/Products/Details.cshtml
+++ b/AspMVCECommerce/Views/Products/Details.cshtml
@@ -10,10 +10,10 @@
 <div id="breadcrumb" class="section breadcrumbx" style="display: flex;">
     <div class="container">
 
-        <div class="row pull-left" style="width: 230px;">
+        <div class="row pull-left">
             <div class="col-md-12">
                 <ul class="breadcrumb-tree">
-                    <li> <a href="#" style="font-size: 16px; font-weight: bold">Manage Product</a></li>
+                    <li> <a href="#" style="font-size: 16px; font-weight: bold; white-space: nowrap;">Manage Product</a></li>
 
                 </ul>
 
@@ -23,7 +23,7 @@
     </div>
 
     <!-- container -->
-    <div class="container" style="margin-left:200px;">
+    <div class="container" style="margin-left: 200px;">
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
