--- a/AspMVCECommerce/Views/Products/Index.cshtml
+++ b/AspMVCECommerce/Views/Products/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="row pull-left" style="width: 230px;">
             <div class="col-md-12">
                 <ul class="breadcrumb-tree">
-                    <li> <a href="#" style="font-size: 16px; font-weight: bold">Manage Product</a></li>
+                    <li> <a href="#" style="font-size: 16px; font-weight: bold; white-space: nowrap;">Manage Product</a></li>
 
                 </ul>
 
@@ -29,7 +29,7 @@
 
 
     <!-- container -->
-    <div class="container" style="margin-left:200px;">
+    <div class="container" style="margin-left: 200px;">
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
