--- a/AspMVCECommerce/Content/Site.css
+++ b/AspMVCECommerce/Content/Site.css
@@ -459,3 +459,79 @@ input:focus-visible {
         width: 1400px;
     }
 }*/
+
+
+
+#reviewTable td, #reviewTable tr
+{
+    padding: 0px !important;
+    margin:0px !important;
+}
+
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+    background-color: none !important;
+    background: none !important;
+    background: none !important;
+}
+
+
+.dataTables_wrapper .dataTables_paginate .paginate_button:active {
+    box-shadow: none !important;
+}
+
+.col-center-block {
+    float: none !important;
+    display: block;
+    margin: 0 auto !important;
+    text-align: center !important;
+    /* margin-left: auto; margin-right: auto; */
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+    padding: 0px !important;
+    width: 35px !important;
+    height: 35px !important;
+    line-height: 35px;
+    text-align: center;
+    background-color: #FFF;
+    border: 1px solid #E4E7ED;
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
+}
+
+    .dataTables_wrapper .dataTables_paginate .paginate_button .page-link {
+        padding: 0px !important;
+        width: 35px !important;
+        height: 35px !important;
+        line-height: 35px !important;
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 500 !important;
+        font-size: 13.5px !important;
+    }
+
+
+.dataTables_paginate .pagination li + li {
+    margin-left: 4px !important;
+}
+
+
+.dataTables_paginate .pagination {
+    margin-top: 0px !important;
+}
+
+
+
+.alert-primaryx {
+    color: #004085;
+    background-color: #cce5ff;
+    border-color: #b8daff;
+}
+
+.alertx {
+    position: relative;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+}
