--- a/AspMVCECommerce/Views/Account/Login.cshtml
+++ b/AspMVCECommerce/Views/Account/Login.cshtml
@@ -11,9 +11,9 @@
     <!-- container -->
     <div class="container">
 
-        <div class="row">
+        <div class="row" style="margin-left:0px;">
             <h2>@ViewBag.Title.</h2>
-            <div class="col-md-8">
+            <div class="col-md-8" style="padding-right: 0px;padding-left: 0px;">
                 <section id="loginForm">
                     @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
