add review input validation

--- a/AspMVCECommerce/Content/Site.css
+++ b/AspMVCECommerce/Content/Site.css
@@ -522,10 +522,11 @@ input:focus-visible {
 
 
 
-.alert-primaryx {
-    color: #004085;
-    background-color: #cce5ff;
-    border-color: #b8daff;
+
+.alert-successx {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
 }
 
 .alertx {
@@ -534,4 +535,10 @@ input:focus-visible {
     margin-bottom: 1rem;
     border: 1px solid transparent;
     border-radius: 0.25rem;
+}
+
+.alert-dangerx {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
 }
