--- a/AspMVCECommerce/Views/Home/Store.cshtml
+++ b/AspMVCECommerce/Views/Home/Store.cshtml
@@ -398,7 +398,7 @@
                                 </div>
                                 <div class="product-body">
                                     <p class="product-category">@item.Category.Name</p>
-                                    <h3 class="product-name"><a href="#" class="product-namex">@item.Name</a></h3>
+                                    <h3 class="product-name"><a href="/Home/Product?productId=@item.ProductId" class="product-namex">@item.Name</a></h3>
 
 
                                     @if (item.PromoSaleOFF > 0)
@@ -421,17 +421,37 @@
 
 
 
+                                    @*<div class="product-rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>*@
+
+
                                     <div class="product-rating">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
+                                        @if (item.AverageRating != null)
+                                        {
+                                            for (int i = 0; i < item.AverageRating; i++)
+                                            {
+                                                <i class="fa fa-star"></i>
+                                            }
+
+                                            for (int i = 0; i < 5 - item.AverageRating; i++)
+                                            {
+                                                <i class="fa fa-star-o"></i>
+                                            }
+                                        }
                                     </div>
+
+
                                     <div class="product-btns">
                                         <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
                                         <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
-                                        <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+                                        @*<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>*@
+
+                                        <button class="quick-view" onclick="location.href='/Home/Product?productId=@item.ProductId'"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
                                     </div>
                                 </div>
                                 <div class="add-to-cart">
